# retro

./: .editorconfig  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  publish.yml  release.yml  tag.yml
src/: cli.rs  compress.rs  config.rs  dat.rs  games.rs  link.rs  main.rs  onion.rs  playlist.rs  rename.rs  utils.rs
