[package]
name = "retro"
version = "0.0.0"
authors = ["Andy Dirnberger <andy.dirnberger@gmail.com>"]
edition = "2021"
description = "Retro game catalog management."
readme = "README.md"
repository = "https://github.com/dirn/retro"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
confy = "1.0.0"
env_logger = "0.11.6"
log = "0.4.27"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"

[dev-dependencies]
tempdir = "0.3.7"
test-context = "0.4.1"
