[package]
name = "retro"
version = "0.0.0"
authors = ["Andy Dirnberger <andy.dirnberger@gmail.com>"]
edition = "2021"
description = "Retro game catalog management."
readme = "README.md"
repository = "https://github.com/dirn/retro"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
confy = "2.0.0"
env_logger = "0.11.6"
log = "0.4.28"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.1"

[dev-dependencies]
tempdir = "0.3.7"
test-context = "0.5.3"
